# GStreamer-tutorial

./: README.md
camera_video_capture/: CMakeLists.txt  main.cpp
video_mixer/: main.cpp
video_mixer_dump_file/: CMakeLists.txt  main.cpp
